--- a/sample.env
+++ b/sample.env
@@ -3,6 +3,7 @@ RELAY_NAME="my-rss-relay"
 RELAY_URL="rssnotes.example.org"
 RELAY_PRIVKEY="private-key-hex"
 RELAY_PUBKEY="public-key-hex"
+RANDOM_SECRET="aRandomStringAtLeast20charslong"
 
 #### OPTIONAL SETTINGS ####
 #RELAY_DESCRIPTION="A relay for rss notes." 
