run using docker

--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,11 @@
 # Relay Settings
-RELAY_NAME="my-rss-relay"
-RELAY_URL="rssnotes.example.org"
 RELAY_PRIVKEY="private-key-hex"
 RELAY_PUBKEY="public-key-hex"
 RANDOM_SECRET="aRandomStringAtLeast20charslong"
+RELAY_URL="rssnotes.example.org"
 
 #### OPTIONAL SETTINGS ####
+RELAY_NAME="my-rssnotes-relay"
 #RELAY_DESCRIPTION="A relay for rss notes." 
 #RELAY_CONTACT="email@example.com" 
 #RELAY_ICON="https://fileserver.exapmle.com/icon.png" 
