display feed icons

--- a/sample.env
+++ b/sample.env
@@ -8,6 +8,6 @@ RELAY_URL="rssnotes.example.org"
 RELAY_NAME="my-rssnotes-relay"
 #RELAY_DESCRIPTION="A relay for rss notes." 
 #RELAY_CONTACT="email@example.com" 
-#RELAY_ICON="https://fileserver.exapmle.com/icon.png" 
+#RELAY_ICON="https://i.imgur.com/MaceU96.png" 
 #PORT="3334"
 #MAX_NOTE_AGE_DAYS="90" #notes older than this many days will be deleted, disabled by default or if set to "0"
