publish metadata note on create and live urls

--- a/sample.env
+++ b/sample.env
@@ -10,4 +10,5 @@ RELAY_NAME="my-rssnotes-relay"
 #RELAY_CONTACT="email@example.com" 
 #RELAY_ICON="https://i.imgur.com/MaceU96.png" 
 #PORT="3334"
+#DEFAULT_PROFILE_PICTURE_URL="https://i.imgur.com/MaceU96.png"
 #MAX_NOTE_AGE_DAYS="90" #notes older than this many days will be deleted, disabled by default or if set to "0"
